public_html/css/additional_design.css
img.playstore, img.appstore{
    cursor: pointer;
}



.top_presentation {
    display: none;
}

.top_presentation_small{
    margin-top: 100px;
    clear: left;
    width: 400px;
    margin-left: -200px;

}

.top_presentation_small img {
    position: relative;
    margin-top: -50px;
    z-index: 2;
    width: 200px;
    left: 50%;
    margin-left: -100px;
}

.top_presentation_small .phone{
    position: absolute;
}

#about{
    padding-top: 300px;
}

.store_buttons a{
    cursor: pointer!important;
    transition: none!important;
    text-decoration: none;
}

.store_buttons{
    position: relative;
    left: 50%;
    margin-left: -100px;
    width: 200px;


}
.store_buttons img{
    width: 200px;
    display: block;
    margin-top: 10px;
}


.features_phone_side{
    display: none;
}

/* BIG SCREENS */

@media(min-width:610px) {



    .top_presentation {
        display: block;
        height: 250px;
        overflow:hidden;
        margin-left: 355px;
        margin-top: 50px;
    }

    .top_presentation img {
        position: absolute;
        width: 150px;
        margin-top: -30px;

    }

    .top_presentation .phone1{
        position: absolute;
        margin-left: -450px;
    }

    .top_presentation .phone2{
        position: absolute;
        margin-left: -50px;
        margin-top: -55px;

    }

    #about{
        padding-top: 100px;
    }

    .top_presentation_small{
        display: none;
    }

    .store_buttons{
        position: absolute;
        display: block;;

        left: 50%;
        margin-left: -100px;
        width: 200px;
        margin-top: -200px;


    }
    .store_buttons img{
        width: 200px;
        display: block;
        margin-top: 10px;
    }
}



/* FEATURES */



.features_phone_side{
    position: relative;
    display: block;
    width: 90%;
    margin: 0 auto;
    max-width: 400px;
    margin-top: 30px
}

.features_phone_side img{
    width: 100%;

}

#features{
    padding-left: 20px
}


@media(min-width:847px) {
    #features{
        padding-left: 0px
    }
    .features_phone_side{
        position: absolute;
        display: block;
        width: 300px;
        float: right;
        margin-left: 400px;
        margin-top: -150px;
    }

    .features_phone_side img{
        width: 300px;
    }

}


/* NEW SCHEDULE FORMAT */

@media(max-width:846px) {
    #schedule{
        padding-left: 0px;
        padding-bottom: 340px;
    }

    #schedule .text{

    }

    #services{
        padding-top: 80px!important;
    }

    .schedule_screens{
        position: absolute;
        display: block;
        margin-left: 0;
        margin-top: 0px;
        width: 90%;
        max-width: 200px;
        left: 50%;
        margin-left: -150px;
    }

    .schedule_screens img{
        position: absolute;
        display: block;
        width: 100%;
    }

    .schedule_screens .phone1{

    }

    .schedule_screens .phone2{
        margin-left: 100px;
    }

}
@media(min-width:847px) {
    #schedule{
        padding-left: 0px;
        padding-bottom: 240px;
    }
    #schedule .text{
        text-align: left; width: 100%; max-width: 400px;margin: 0 auto; margin-left: 300px; margin-top: 100px;
    }

    #services{
        padding-top: 10px!important;
    }

    .schedule_screens{
        position: absolute;
        display: block;
        width: 300px;
        float: right;
        margin-left: -40px;
        margin-top: -200px;
    }

    .schedule_screens img{
        width: 200px;
        position: absolute;
        display: block;
    }

    .schedule_screens .phone1{

    }

    .schedule_screens .phone2{
        margin-left: 100px;
    }
}


/* STORE BUTTONS BOTTOM */



    .store_buttons_bottom{
        position: relative;
        left: 50%;
        margin-left: -50%;
        width: 100%;

    }


    .store_buttons_bottom a{

        cursor: pointer!important;
        transition: none!important;
        text-decoration: none;
    }
    .store_buttons_bottom img{
        width: 200px;
        display: inline-block;
        margin-top: 10px;
        margin-left: 10px;

    }




/* COMMENTS */
.vk_comments{
    position: relative;
    padding-top: 30px;
    width: 320px;
    left: 50%;
    margin-left: -160px;
}

